# python-exhaustiveness-adts-monads

./: README.md  color.py  main.py  pyproject.toml
demo/: color.py  color_enum.py  ideas.py  literal_type.py  order_status_enum.py  union_type.py
src/: adt_1_order_status.py  adt_2_result.py  adt_3_result_monad.py  color_enum.py  functional_adt_patterns.py  order_status_adt.py  order_status_enum.py  union_type.py
