[tool.poetry]
name = "exhaustiveness-checking"
version = "0.1.0"
description = ""
authors = ["Robb Shecter <robb@public.law>"]

[tool.poetry.dependencies]
python = "^3.10"
pyright = "^1.1.256"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
mypy = "^0.961"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
